fix content overflow

--- a/app/blog/post/[slug]/post.css
+++ b/app/blog/post/[slug]/post.css
@@ -42,6 +42,7 @@ pre.your-class-name {
     padding: 8px;
     border-radius: 7px;
     white-space: pre-wrap;
+    overflow: hidden;
 }
 :is(.dark) *.your-class-name {
     color: white;
